Revert "Let list handling catch up with Java 17"