@@ -1,8 +1,9 @@
 package com.yahoo.container.plugin.classanalysis.sampleclasses;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
+
 import java.util.Collection;
-import java.util.List;
-import java.util.Set;
 
 /**
  * Input for class analysis test verifying Java 14 switch statement.
@@ -14,8 +15,8 @@ public class SwitchStatement {
     void switchStatement() throws Exception{
         String foo = "";
         Collection<?> c = switch (foo) {
-            case "list" -> List.of();
-            case "set" -> Set.of();
+            case "list" -> ImmutableList.of();
+            case "set" -> ImmutableSet.of();
             default -> throw new IllegalArgumentException();
         };
     }
