@@ -2,6 +2,7 @@
 package com.yahoo.vespa.model.admin.monitoring;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Map;
@@ -23,7 +24,7 @@ public class MetricSet {
     private final Set<MetricSet> children;
 
     public MetricSet(String id, Collection<Metric> metrics) {
-        this(id, metrics, Set.of());
+        this(id, metrics, Collections.emptySet());
     }
 
     public MetricSet(String id, Collection<Metric> metrics, Collection<MetricSet> children) {
@@ -56,7 +57,9 @@ public class MetricSet {
     @Override
     public boolean equals(Object o) {
         if (this == o) return true;
-        if (!(o instanceof MetricSet that)) return false;
+        if (!(o instanceof MetricSet)) return false;
+
+        MetricSet that = (MetricSet) o;
 
         return Objects.equals(id, that.id);
 
