@@ -1,15 +1,12 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.search.query.profile;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.yahoo.component.provider.Freezable;
 import com.yahoo.search.query.profile.types.QueryProfileType;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * This class represent a set of query profiles virtually - rather
@@ -57,7 +54,7 @@ public class QueryProfileVariants implements Freezable, Cloneable {
      * on lookup time to influence the value returned.
      */
     public QueryProfileVariants(String[] dimensions, QueryProfile owner) {
-        this(List.of(dimensions), owner);
+        this(Arrays.asList(dimensions), owner);
     }
 
     /**
@@ -80,13 +77,13 @@ public class QueryProfileVariants implements Freezable, Cloneable {
         if (frozen) return;
         for (FieldValues fieldValues : fieldValuesByName.values())
             fieldValues.freeze();
-        fieldValuesByName = Map.copyOf(fieldValuesByName);
+        fieldValuesByName = ImmutableMap.copyOf(fieldValuesByName);
         inheritedProfiles.freeze();
 
         Collections.sort(variants);
         for (QueryProfileVariant variant : variants)
             variant.freeze();
-        variants = List.copyOf(variants);
+        variants = ImmutableList.copyOf(variants);
 
         frozen=true;
     }
@@ -334,7 +331,7 @@ public class QueryProfileVariants implements Freezable, Cloneable {
             if (frozen) return;
             sort();
             if (resolutionList != null)
-                resolutionList = List.copyOf(resolutionList);
+                resolutionList = ImmutableList.copyOf(resolutionList);
             frozen = true;
         }
 
